Fixed UI issues on iPhone mobile, CubeGrid unable to scroll on mobile, and added idle animation for cubegrid on desktop and mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 
 html {
   scroll-behavior: smooth;
+  background-color: #1a1a1a;
 }
 :root {
   /* font-family: 'JetBrains Mono', system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -24,7 +25,7 @@ html {
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #111;
+  background-color: #111111;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -39,6 +40,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #111111;
 }
 
 #root {
